--- a/website/docs/language/expressions/version-constraints.mdx
+++ b/website/docs/language/expressions/version-constraints.mdx
@@ -94,3 +94,5 @@ versions do not match inexact operators such as `>=`, `~>`, etc.
 
 - Root modules should use a `~>` constraint to set both a lower and upper bound
   on versions for each provider they depend on.
+  
+- terr
